# trip-agender

./: .gitignore  pyproject.toml  run.py
app/: __init__.py  run.py
app/src/controllers/: actitivity_creator.py  activity_finder.py  link_creator.py  link_finder.py  participant_confirmer.py  participant_creator.py  participant_finder.py  trip_confirmer.py  trip_creator.py  trip_finder.py
app/src/drivers/: email_sender.py
app/src/main/routes/: trips_routes.py
app/src/main/server/: server.py
app/src/models/repositories/: activities_repository.py  emails_to_invite_repository.py  links_repository.py  participants_repository.py  trips_repository.py
app/src/models/settings/: db_connection_handler.py
init/: schema.sql
tests/: emails_to_invite_repository_test.py  links_repository_test.py  trips_repository_test.py
