[tool.poetry]
name = "nlw-16"
version = "0.1.0"
description = ""
authors = ["hugoadventist <28987448+hugoadventist@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pytest = "^8.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
